@@ -2,7 +2,11 @@ Revision history for Perl extension App-Egaz
 
 {{$NEXT}}
 
-    - Avoid errors of too many highlights
+    - `egaz template`
+        - Add `--partition`
+        - Avoid errors of too many highlights
+        - Remove link4
+        - Use more jrunlist and jrange
 
 0.2.1 2018-06-29T11:18:45Z
     - Handle old NCBI fasta headers: `>gi|\d+gb|\d+` or `>gi|\d+ref|\d+`
